--- a/website/templates/about-us.html
+++ b/website/templates/about-us.html
@@ -29,38 +29,29 @@
     <div class="about-container">
         <img src="../static/images/choir2.jpg" class="about-img">
         <div class="banner-h-container">
-            <h2>Connect With Us</h2>
+            <h2>Our History</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Our vision at the Greater Bethlehem Temple Ministry is clear: to transform individuals into missionaries
+                for Christ. Join us as we equip and empower every member to embrace their calling and make a lasting
+                impact in the world. Together, let's share God's love and bring hope to those in need.
+
             </p>
         </div>
         <div class ="bottom-menu-container">
             <div class="bottom-menu">
                 <ul>
-                    <li><a href="/give">Give Today</a></li>
-                    <li><a href="/events">Events</a></li>
+                    <li><a href="/#">Our Beliefs</a></li>
+                    <li><a href="/#">Our Pastor</a></li>
+                    <li><a href="/#">Our First Lady</a></li>
+                    <li><a href="/#">What to Expect</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div class="connect-with-us-container">
-        <img src="../static/images/wide.jpg">
-        <div class="connect-with-us">
-            <h3>CONNECT WITH US THROUGH FAITH AND LOVE</h3>
-            <hr class="connect-with-us-divider">
-            <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
-                Your membership is a submission to a covenant with God and His people that is
-                inclusive, compassionate and honorable.</p>
-            <li><a href="/connect">Learn About Membership</a></li>
 
-        </div>
-    </div>
 
-    <div class="buffer"></div>
 
       <div class="footer-container">
     <div class="column">
