--- a/website/static/css/about-us.css
+++ b/website/static/css/about-us.css
@@ -188,10 +188,6 @@ p {
 
 }
 
-.connect-with-us-container{
-    display: none;
-}
-
 h4{
     position: relative;
     display: flex;
@@ -336,6 +332,9 @@ h4{
           width: 100%;
           height: 425px;
           background: var(--burgundy-overlay);
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
         /*overflow: none; fixes scroll into whitespace - might be a problem - to fix (delete and set widths to 100%)*/
 
         }
@@ -369,7 +368,7 @@ h4{
 
         .bottom-menu{
             padding: 0px;
-            width: 521px;
+            width: 80%;
             height: 56px;
             display: flex;
             justify-content: space-between;
@@ -379,7 +378,7 @@ h4{
         .bottom-menu ul{
             width: 100%;
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             padding: 0;
         }
 
@@ -408,7 +407,7 @@ h4{
 .banner-h-container{
     position: relative;
     display: flex;
-    width: 90%;
+    width: 100%;
     margin: 0;
     text-align: center;
     justify-content: center;
@@ -420,65 +419,35 @@ h4{
 .banner-h-container h2{
     color: white;
     font-weight: 400;
-    font-size: 22px;
+    font-size: 40px;
 
 }
 
 .banner-msg{
-    position: relative;
-    top: 150px;
     display: flex;
     width: 100%;
     margin: 0;
     text-align: center;
     justify-content: center;
     align-items: center;
-    display: none;
 
 }
 
 .banner-msg p{
     color: white;
-    font-weight: 200;
+    font-weight: 300;
     margin: 5px;
     margin-top: 10px;
-    font-size: 16px;
+    width: 75%;
+    padding-bottom: 75px;
+    font-size: 24px;
 }
 
 
 
 
 
-        .connect-with-us-container{
-            margin-top: 1000px;
-            display: flex;
-            height: 829px;
-            width: auto;
-            position: relative;
-            background-image: url('join-us.jpg');
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
 
-        .connect-with-us-container img {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            z-index: -1;
-        }
-
-        .connect-with-us{
-            position: relative;
-            height: 452px;
-            width: 869px;
-            background: rgba(122,59,59,.9);
-            display: flex;
-            justify-content: center;
-
-        }
 
         h3{
             color: white;
@@ -491,58 +460,6 @@ h4{
 
         }
 
-        .connect-with-us-divider{
-            width: 250px;
-            display: flex;
-            position: absolute;
-            top: 200px;
-            padding: 0px;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            border-top: 1px dotted white;
-        }
-
-        .connect-with-us p{
-            color: white;
-            font-size: 24px;
-            font-weight: 100;
-            text-align: center;
-            padding-left: 38px;
-            padding-right: 38px;
-            padding-top: 10px;
-            position: absolute;
-            top: 250px;
-        }
-
-        .connect-with-us li{
-            background: rgba(122,59,59,.9);
-            border: 1px solid white;
-            list-style: none;
-            width: 267px;
-            height: 41px;
-            margin: 0px;
-            padding: 0px;
-            position: absolute;
-            top: 375px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-        }
-
-        .connect-with-us li a{
-            display: flex;
-            text-decoration: none;
-            color: white;
-            text-align: center;
-            margin: 0px;
-            padding: 0px;
-        }
-
-        .connect-with-us li:hover{
-            background: rgb(47,46,46);
-            transition: background-color 0.5s ease;
-        }
 
         .footer-container {
               all: unset;
