--- a/website/static/css/events.css
+++ b/website/static/css/events.css
@@ -649,6 +649,7 @@ h4{
             font-weight: 300;
             margin: 5px;
             margin-top: 10px;
+            padding-bottom: 20px;
             font-size: 24px;
             width: 75%;
         }
