Added video to homepage.html

--- a/website/static/css/give.css
+++ b/website/static/css/give.css
@@ -2,7 +2,7 @@
     --nav-color: black;
     --nav-color2: rgb(223,213,213);
     --burgundy: rgb(122,59,59);     /*(86,0,34)*/
-    --grey: rgb(230, 223, 223);
+    --grey: rgb(237,237,237);
     --grey1: rgb(174, 158,158);
 
 }
