--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -27,7 +27,7 @@
     </header>
     <div class="video-container">
         <video autoplay loop muted>
-            <source src="../static/videos/background-vid.mp4" type="video/mp4">
+            <source src="../static/videos/final_promo.mov" type="video/mp4">
         </video>
         <div class="splash-image-container">
             <div class="splash-image">
@@ -144,7 +144,7 @@
             <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
                 Your membership is a submission to a covenant with God and His people that is
                 inclusive, compassionate and honorable.</p>
-            <li><a href="/connect">Learn About Membership</a></li>
+            <li><a href="/connect">Learn About our Ministries</a></li>
 
         </div>
     </div>
