--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <div class="menu">
-            <a href="/" class="nav-logo-container"><img src="../static/images/white_logo.png" class="nav-logo"></a>
+            <a href="/" class="mobile-nav-logo-container"><img src="../static/images/white_logo.png" class="mobile-nav-logo"></a>
+            <a href="/" class="nav-logo-container"><img src="../static/images/header logo2.png" class="nav-logo"></a>
             <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
             <nav>
                 <ul>
@@ -31,13 +32,13 @@
         </video>
         <div class="splash-image-container">
             <div class="splash-image">
-                <img src="../static/images/logo.png" class="splash-image">
+                <img src="../static/images/splash logo5.2.png" class="splash-image">
             </div>
         </div>
         <div class="floating-buttons-container">
             <div class="floating-buttons">
                 <ul>
-                    <a href="#"><li>In-Person Service</li></a>
+                    <a href="/what-to-expect"><li>In-Person Service</li></a>
                     <a href="/watch"><li>Watch Online</li></a>
                 </ul>
             </div>
@@ -141,9 +142,9 @@
         <div class="connect-with-us">
             <h3>CONNECT WITH US THROUGH FAITH AND LOVE</h3>
             <hr class="connect-with-us-divider">
-            <p>To join in membership at Greater Bethlehem Temple means to connect in relationship.
-                Your membership is a submission to a covenant with God and His people that is
-                inclusive, compassionate and honorable.</p>
+            <p>GBT is a growing, thriving body of believers who are passionate about living for Christ! Whether 6 or 60
+                years of age, our members are active Kingdom builders who understand that God loves each of us and has
+                filled our lives with purpose.</p>
             <li><a href="/connect">Learn About our Ministries</a></li>
 
         </div>
