--- a/website/static/css/aberdeen.css
+++ b/website/static/css/aberdeen.css
@@ -27,17 +27,20 @@ header{
 }
 
 
-
-
-.nav-logo-container{
+.mobile-nav-logo-container{
     width: 100%;
 }
 
-.nav-logo{
+.mobile-nav-logo{
     width: auto;
     height: 60px;
     position: relative;
     top: 10px;
+
+}
+
+.nav-logo{
+    display: none;
 }
 
 
@@ -77,7 +80,9 @@ nav{
     transform-origin: top;
     transition: transform 400ms ease-in-out;
 }
-
+nav-logo-container{
+    display: none;
+}
 nav ul{
     margin: 0;
     padding: 0;
@@ -492,8 +497,7 @@ h4{
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 7.5%;
-            margin-right: 4em;
+
 
         }
 
@@ -501,8 +505,9 @@ h4{
             all: unset;
             width: auto;
             height: 100px;
-            margin-right: 0px;
+            margin-right: 20px;
             margin-left: 0px;
+            margin-top: 12px;
 
         }
 
@@ -549,8 +554,14 @@ h4{
             transform: scale(1,1);
         }
 
+        .mobile-nav-logo-container{
+            display: none;
+        }
 
+         .mobile-nav-logo{
+            display: none;
 
+        }
         h3{
             color: black;
             font-size: 48px;
@@ -683,10 +694,8 @@ h4{
               padding: 20px;
               text-align: center;
               color: white;
-              margin-bottom: 50px;
-              margin-left: 75px;
-              margin-right: 75px;
-
+              margin-bottom: 75px;
+              width: 100%;
             }
 
         .column p{
