--- a/website/static/css/connect.css
+++ b/website/static/css/connect.css
@@ -27,16 +27,12 @@ header{
 
 
 
-
 .nav-logo-container{
-    width: 100%;
+    display: none;
 }
 
 .nav-logo{
-    width: auto;
-    height: 60px;
-    position: relative;
-    top: 10px;
+    display: none;
 }
 
 
@@ -63,6 +59,18 @@ header{
 
 .nav-toggle-label span::after{
     top: 7px;
+}
+
+.mobile-nav-logo-container{
+    width: 100%;
+}
+
+.mobile-nav-logo{
+    width: auto;
+    height: 60px;
+    position: relative;
+    top: 10px;
+
 }
 
 nav{
@@ -451,8 +459,7 @@ h4{
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 7.5%;
-            margin-right: 4em;
+
 
         }
 
@@ -460,9 +467,15 @@ h4{
             all: unset;
             width: auto;
             height: 100px;
-            margin-right: 0px;
+            margin-right: 20px;
             margin-left: 0px;
+            margin-top: 12px;
 
+        }
+
+
+         .mobile-nav-logo-container{
+            display: none;
         }
 
         nav {
@@ -471,7 +484,14 @@ h4{
             align-items: center;
 
         }
+        .mobile-nav-logo-container{
+            display: none;
+        }
 
+        .mobile-nav-logo{
+            display: none;
+
+        }
         nav ul{
             display: flex;
             justify-content: center;
@@ -636,10 +656,8 @@ h4{
               padding: 20px;
               text-align: center;
               color: white;
-              margin-bottom: 50px;
-              margin-left: 75px;
-              margin-right: 75px;
-
+              margin-bottom: 75px;
+              width: 100%;
             }
 
         .column p{
