--- a/website/static/css/education.css
+++ b/website/static/css/education.css
@@ -29,16 +29,8 @@ header{
 
 
 
-.nav-logo-container{
-    width: 100%;
-}
 
-.nav-logo{
-    width: auto;
-    height: 60px;
-    position: relative;
-    top: 10px;
-}
+
 
 
 .nav-toggle-label span,
@@ -64,6 +56,24 @@ header{
 
 .nav-toggle-label span::after{
     top: 7px;
+}
+.nav-logo{
+    display: none;
+
+}
+.mobile-nav-logo{
+    width: auto;
+    height: 60px;
+    position: relative;
+    top: 10px;
+
+}
+
+.nav-logo-container{
+    display: none;
+}
+.mobile-nav-logo-container{
+    width: 100%;
 }
 
 nav{
@@ -488,21 +498,15 @@ h4{
             display: none;
         }
 
+        .mobile-nav-logo-container{
+            display: none;
+        }
+
         .nav-logo-container{
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 7.5%;
-            margin-right: 4em;
 
-        }
-
-        .nav-logo {
-            all: unset;
-            width: auto;
-            height: 100px;
-            margin-right: 0px;
-            margin-left: 0px;
 
         }
 
@@ -510,6 +514,19 @@ h4{
             all: unset;
             display: flex;
             align-items: center;
+
+        }
+        .nav-logo {
+            all: unset;
+            width: auto;
+            height: 100px;
+            margin-right: 20px;
+            margin-left: 0px;
+            margin-top: 12px;
+
+        }
+        .mobile-nav-logo{
+            display: none;
 
         }
 
@@ -683,10 +700,8 @@ h4{
               padding: 20px;
               text-align: center;
               color: white;
-              margin-bottom: 50px;
-              margin-left: 75px;
-              margin-right: 75px;
-
+              margin-bottom: 75px;
+              width: 100%;
             }
 
         .column p{
