--- a/website/static/css/first-lady.css
+++ b/website/static/css/first-lady.css
@@ -28,17 +28,7 @@ header{
 
 
 
-.nav-logo-container{
-    width: 100%;
-}
 
-.nav-logo{
-    width: auto;
-    height: 60px;
-    position: relative;
-    top: 10px;
-
-}
 
 
 .nav-toggle-label span,
@@ -65,6 +55,29 @@ header{
 .nav-toggle-label span::after{
     top: 7px;
 }
+
+.nav-logo-container{
+    display: none;
+}
+
+
+.mobile-nav-logo-container{
+    width: 100%;
+}
+
+.mobile-nav-logo{
+    width: auto;
+    height: 60px;
+    position: relative;
+    top: 10px;
+
+}
+
+.nav-logo{
+    display: none;
+
+}
+
 
 nav{
     position: absolute;
@@ -397,14 +410,6 @@ h4{
             display: none;
         }
 
-        .nav-logo-container{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            max-width: 7.5%;
-            margin-right: 4em;
-
-        }
 
         .nav-logo {
             all: unset;
@@ -412,6 +417,30 @@ h4{
             height: 100px;
             margin-right: 0px;
             margin-left: 0px;
+
+        }
+        .mobile-nav-logo-container{
+            display: none;
+        }
+
+        .mobile-nav-logo{
+            display: none;
+
+        }
+
+        .nav-logo-container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .nav-logo {
+            all: unset;
+            width: auto;
+            height: 100px;
+            margin-right: 20px;
+            margin-left: 0px;
+            margin-top: 12px;
 
         }
 
@@ -684,10 +713,8 @@ border-radius: 5px;
               padding: 20px;
               text-align: center;
               color: white;
-              margin-bottom: 50px;
-              margin-left: 75px;
-              margin-right: 75px;
-
+              margin-bottom: 75px;
+              width: 100%;
             }
 
         .column p{
