--- a/website/templates/watch.html
+++ b/website/templates/watch.html
@@ -10,7 +10,8 @@
 <body>
     <header>
         <div class="menu">
-            <a href="/" class="nav-logo-container"><img src="../static/images/white_logo.png" class="nav-logo"></a>
+            <a href="/" class="mobile-nav-logo-container"><img src="../static/images/white_logo.png" class="mobile-nav-logo"></a>
+            <a href="/" class="nav-logo-container"><img src="../static/images/header logo2.png" class="nav-logo"></a>
             <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
             <nav>
                 <ul>
